fix Java version problems